Fix typo in actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,11 @@ jobs:
 
       - name: npm ci
         run: npm ci
-        working-directory: ./src/asets
+        working-directory: ./src/assets
 
       - name: npm build
         run: npm run build --if-present
-        working-directory: ./src/asets
+        working-directory: ./src/assets
 
       - name: Build
         run: dotnet build --configuration Debug --no-restore --nologo
